5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1593_2908.log
== TEST (2019-03-29 21:03:50) 
-- CODE:
a = 2
b = 3
c = 4
espressao = (a **2 + b **2 + c **2) / (a + b + c) 
print(round(espressao, 7))
-- OUTPUT:
3.2222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:04:16) 
-- CODE:
a = 2
b = 3
c = 4
espressao = (a **2 + b **2 + c **2) / (a + b + c) 
print(round(espressao, 7))
-- EXECUTION TIME:
0.183454
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
3.2222222
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
3.2222222
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
3.2222222
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:04:27) 
-- CODE:
a = 2
b = 3
c = 4
espressao = (a **2 + b **2 + c **2) / (a + b + c) 
print(round(espressao, 7))
-- OUTPUT:
3.2222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:04:47) 
-- CODE:
a = 1
b = 2
c = 3
espressao = (a **2 + b **2 + c **2) / (a + b + c) 
print(round(espressao, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:04:52) 
-- CODE:
a = 1
b = 2
c = 3
espressao = (a **2 + b **2 + c **2) / (a + b + c) 
print(round(espressao, 7))
-- EXECUTION TIME:
0.150805
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:04:58) 
-- CODE:
a = 1
b = 2
c = 3
espressao = (a **2 + b **2 + c **2) / (a + b + c) 
print(round(espressao, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:06:14) 
-- CODE:
vara = 1
varb = 2
varc = 3
espressao = (vara **2 +varb **2 + varc **2) / (vara + varb + varc) 
print(round(espressao, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:06:29) 
-- CODE:
vara = 1
varb = 2
varc = 3
espressao = (vara **2 +varb **2 + varc **2) / (vara + varb + varc) 
print(round(espressao, 7))
-- EXECUTION TIME:
0.135761
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:06:35) 
-- CODE:
vara = 1
varb = 2
varc = 3
espressao = (vara **2 +varb **2 + varc **2) / (vara + varb + varc) 
print(round(espressao, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:11:46) 
-- CODE:
var1 = a
var2 = b
var3 = c
espressao = (var1 **2 + var2 **2 + var3 **2) / (var1 + var2 + var3)
print(round(espressao, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1 = a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:12:16) 
-- CODE:
var1 = 1
var2 = 2
var3 = 3
espressao = (var1 **2 + var2 **2 + var3 **2) / (var1 + var2 + var3)
print(round(espressao, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:12:32) 
-- CODE:
var1 = 1
var2 = 2
var3 = 3
espressao = (var1 **2 + var2 **2 + var3 **2) / (var1 + var2 + var3)
print(round(espressao, 7))
-- EXECUTION TIME:
0.242163
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:15:16) 
-- CODE:
a = 1
b = 2
c = 3
espressao = (a **2 + b **2 + c **2) / (a + b + c)
print(round(espressao, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:15:39) 
-- CODE:
a = 1
b = 2
c = 3
print(round((a **2 + b **2 + c **2) / (a + b + c), 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:15:50) 
-- CODE:
a = 1
b = 2
c = 3
print(round((a **2 + b **2 + c **2) / (a + b + c), 7))
-- EXECUTION TIME:
0.108795
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 21:17:37) 
-- CODE:
1
2
3
print(round((1 **2 + 2 **2 + 3 **2) / (1 + 2 + 3), 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 21:17:42) 
-- CODE:
1
2
3
print(round((1 **2 + 2 **2 + 3 **2) / (1 + 2 + 3), 7))
-- EXECUTION TIME:
0.141094
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:13:44) 
-- CODE:
a = 1
b = 2
c = 3
print(round((a**2 + b**2 + c**2) / (a + b + c),7)
-- ERROR:
File "XXXX", line 5
    
                                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:14:11) 
-- CODE:
a = 1
b = 2
c = 3
print(round(a**2 + b**2 + c**2) / (a + b + c),7)
-- OUTPUT:
2.3333333333333335 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:14:37) 
-- CODE:
a = 1
b = 2
c = 3
print(round(a**2 + b**2 + c**2) / (a + b + c), 7))
-- ERROR:
File "XXXX", line 4
    print(round(a**2 + b**2 + c**2) / (a + b + c), 7))
                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:16:04) 
-- CODE:
a = 1
b = 2
c = 3
print(round(a **2 + b **2 + c **2) / (a + b + c))
-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:16:14) 
-- CODE:
a = 1
b = 2
c = 3
print(round(a **2 + b **2 + c **2) / (a + b + c), 7)
-- OUTPUT:
2.3333333333333335 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:16:41) 
-- CODE:
a = 1
b = 2
c = 3
print(round((a **2 + b **2 + c **2) / (a + b + c), 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:18:09) 
-- CODE:
a = 1
b = 2
c = 3
print(round((a **2 + b **2 + c **2) / (a + b + c), 7))
-- EXECUTION TIME:
0.210519
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:28:34) 
-- CODE:
a = 1
b = 2
c = 3
print(round((a **2 + b **2 + c **2) / (a + b + c), 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:29:07) 
-- CODE:
a = 1
b = 2
c = 3
print(round((a **2 + b **2 + c **2) / (a + b + c), 07))
-- ERROR:
File "XXXX", line 4
    print(round((a **2 + b **2 + c **2) / (a + b + c), 07))
                                                        ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:18:13) 
-- CODE:
var1 = (1 **2 + 2 **2 + 3 **2) / (1 + 2 + 3)
print(round(var1, 7))
-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:18:21) 
-- CODE:
var1 = (1 **2 + 2 **2 + 3 **2) / (1 + 2 + 3)
print(round(var1, 7))
-- EXECUTION TIME:
0.201874
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:31:06) 
-- CODE:
num = int(input("Digite o numero: "))
print(round(num, 7))
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:19:56) 
-- CODE:
num = int(input("a,b,c: "))
var1 = (a**2 + b**2 + c**2) / (a + b + c)
print(round(var1, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:20:13) 
-- CODE:
num = int(input("a,b,c: "))
var1 = (a**2 + b**2 + c**2) / (a + b + c)
print(round(var1, 7))
-- EXECUTION TIME:
0.169491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2908/main.py", line 2, in <module>
    var1 = (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:29:30) 
-- CODE:
num = int(input("a,b,c: "))
var1 = (a**2 + b**2 + c**2) / (a + b + c)
print(round(var1, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = (a**2 + b**2 + c**2) / (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:32:33) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")
var1 = (a**2 + b**2 + c**2) / (a + b + c)
print(round(var1, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1 = (a**2 + b**2 + c**2) / (a + b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:33:39) 
-- CODE:
a,b,c= input("a,b,c: ")
var1 = (a**2 + b**2 + c**2) / (a + b + c)
print(round(var1, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a,b,c= input()
ValueError: not enough values to unpack (expected 3, got 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:33:59) 
-- CODE:
a,b,c= input("a,b,c: ")
var1 = (a**2 + b**2 + c**2) / (a + b + c)
print(round(var1, 7))
-- EXECUTION TIME:
0.195217
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2908/main.py", line 1, in <module>
    a,b,c= input()
ValueError: need more than 2 values to unpack

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:46:06) 
-- CODE:
n = int(input("numero de pessoas: "))
n1 = int(input("numero de pessoas: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a,b,c= input()
ValueError: not enough values to unpack (expected 3, got 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:56:10) 
-- CODE:
a = int(input("digite a primeira variavel: "))
b = int(input("digite a segunda variavel: "))
c = int(input("digite a terceira variavel: "))
print(round((a**2 + b**2 + c**2) / (a+b+c), 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:56:45) 
-- CODE:
a = int(input("digite a primeira variavel: "))
b = int(input("digite a segunda variavel: "))
c = int(input("digite a terceira variavel: "))
print(round((a**2 + b**2 + c**2) / (a+b+c), 7))
-- EXECUTION TIME:
0.199117
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
